# translater

./: .gitignore  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  run.sh  translater.py
