[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pdf-translater"
version = "0.1.0"
description = "CLI tool to translate English PDFs to Russian Markdown using OpenAI via LangChain"
readme = "README.md"
authors = [
  { name = "AI Agent", email = "noreply@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["pdf", "translation", "openai", "langchain", "markdown"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Linguistic",
]

# Core runtime dependencies
# Version ranges balance compatibility and stability; adjust as needed
# langchain splitters/loaders have moved across versions; these ranges are conservative
[project.dependencies]
langchain = ">=0.2.0,<0.3.0"
langchain-openai = ">=0.1.0,<0.2.0"
langchain-community = ">=0.2.0,<0.3.0"
pypdf = ">=4,<5"

[project.optional-dependencies]
# Install with: pip install .[yaml]
yaml = [
  "PyYAML>=6.0"
]

[project.scripts]
# After installation, this creates a `pdf-translater` command in your PATH
pdf-translater = "translater:main"

[tool.hatch.metadata]
allow-direct-references = true
